2001-06-14  Tom Tromey  <tromey@redhat.com>

	* automake.in (yacc_lex_finish_helper): Find ylwrap in
	top_srcdir.  From Tim Van Holder.
	* tests/Makefile.am (TESTS): Added yacc6.test.
	* tests/yacc6.test: New file.

2001-06-14  Tim Van Holder  <tim.van.holder@pandora.be>

	* tests/defs, tests/installsh.test: Properly support
	DOS-style paths.

2001-06-14  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (TESTS): Added mdate4.test.
	* tests/mdate4.test: New file.

	* aclocal.in (scan_m4_files): Removed unused variable.

2001-06-14  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* aclocal.in (scan_m4_files): Tweak the building of &search so
	that multiple macro names can be found on the same line.  Ensure
	we match whole macro name, not only substrings.

2001-06-12  Tom Tromey  <tromey@redhat.com>

	* automake.texi (ANSI): Minor clarification.
	(Other GNU Tools): Don't mention Guile.
	(Guile): Removed.
	(Java Support): Mention file extensions.
	(Man pages): Mention dist_.  Don't mention info pages.

2001-06-11  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program variables): Document AM_CPPFLAGS.
	Deprecate INCLUDES.
	(Java Support): Document AM_GCJFLAGS.
	(Support for Other Languages): Removed `fixme'; added link to
	suffix rule handling.

	* automake.texi (Program and Library Variables): Document _LIBADD,
	_LDADD, _LDFLAGS, _AR, and _DEPENDENCIES.

2001-06-11  Kevin Dalley  <kevind@rahul.net>

	* missing: Support configure.ac.

2001-06-08  Tom Tromey  <tromey@redhat.com>

	* tests/version4.test: New file.
	* automake.in (version_check): New sub.
	(handle_options): Use it.
	* tests/Makefile.am (AUTOMAKE_OPTIONS): Removed.
	(TESTS): Added version4.test.
	* m4/Makefile.am (AUTOMAKE_OPTIONS): Removed.
	* Makefile.am (AUTOMAKE_OPTIONS): Remove `gnits'.

2001-06-04  Kevin Dalley  <kevind@rahul.net>

	* lib/am/dejagnu.am (site.exp): Fix typo.

2001-06-02  Tom Tromey  <tromey@redhat.com>

	* automake.in (variable_conditions_sub): Move parent-only code
	from here...