@@ -101,6 +101,7 @@ Motoyuki Kasahara	m-kasahr@sra.co.jp
 Nicolas Thiery		nthiery@Icare.mines.edu
 NISHIDA Keisuke		knishida@nn.iij4u.or.jp
 Nelson H. F. Beebe	beebe@math.utah.edu
+Nicolas Joly		njoly@pasteur.fr
 Noah Friedman		friedman@gnu.ai.mit.edu
 Nyul Laszlo		nyul@sol.cc.u-szeged.hu
 OKUJI Yoshinori		okuji@kuicr.kyoto-u.ac.jp
