@@ -40,7 +40,11 @@
 
 if %?TOPDIR_P%
 ## Explicitly look in srcdir for benefit of non-GNU makes.
-config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
+## Use `$(top_builddir)' for the benefit of Tru64 v5.1 make and also
+## NetBSD v1.5 make.  These `make's don't know that
+## `$(top_builddir)/config.status' and `config.status' are the same
+## file when top_builddir==`.'.
+$(top_builddir)/config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 	$(SHELL) ./config.status --recheck
 
 ## Always require configure.ac and configure at top level, even if they
