@@ -1,5 +1,9 @@
 2001-06-14  Tom Tromey  <tromey@redhat.com>
 
+	* lib/am/configure.am ($(top_builddir)/config.status): Added
+	$(top_builddir) prefix to work around problems with some vendor
+	makes.  From Nicholas Joly.
+
 	* automake.in (yacc_lex_finish_helper): Find ylwrap in
 	top_srcdir.  From Tim Van Holder.
 	* tests/Makefile.am (TESTS): Added yacc6.test.
